@@ -1,3 +1,7 @@
+2014-06-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/scan.l:
+    Fixed bug: #272 Problem with CONFIG and reserved keywords
+
 2014-06-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/directive.c, gpasm/directive.h, gpasm/special.c:
     Changed type of function parameter: 'char *' ==> 'const char *'
